chore(divider): added tokens, fixed breaking change comments

--- a/src/patternfly/components/Divider/examples/Divider.css
+++ b/src/patternfly/components/Divider/examples/Divider.css
@@ -3,11 +3,13 @@
   align-items: center;
 }
 
+[id*="divider-vertical"],
 [id*="ws-core-c-divider-vertical"],
 #ws-core-c-divider-horizontal-on-lg {
-  height: 4rem;
+  height: 6rem;
 }
 
 [id*="ws-core-c-divider"] .ws-preview-html {
   height: 100%;
 }
+
