chore(nav): added tokens, updated style

--- a/src/patternfly/components/Nav/nav-link-text.hbs
+++ b/src/patternfly/components/Nav/nav-link-text.hbs
@@ -2,5 +2,9 @@
   {{#if nav-link-text--attribute}}
     {{{nav-link-text--attribute}}}
   {{/if}}>
-  {{> @partial-block}}
+  {{#if nav-link-text--text}}
+    {{{nav-link-text--text}}}
+  {{else if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
 </span>
