--- a/src/patternfly/demos/Page/page-demo-expandable-nav.hbs
+++ b/src/patternfly/demos/Page/page-demo-expandable-nav.hbs
@@ -26,39 +26,37 @@
             System panel
           {{/nav-link}}
           {{#> nav-subnav nav-subnav--attribute=(concat 'aria-labelledby="' page--id '-expandable-nav-link1"')}}
-            {{#> nav-list}}
-              {{#> nav-item newcontent}}
-                {{#> nav-link nav-link--href="#"}}
-                  Overview
-                {{/nav-link}}
-              {{/nav-item}}
-              {{#> nav-item newcontent}}
-                {{#> nav-link nav-link--href="#" nav-link--current="true"}}
-                  Resource usage
-                {{/nav-link}}
-              {{/nav-item}}
-              {{#> nav-item newcontent}}
-                {{#> nav-link nav-link--href="#"}}
-                  Hypervisors
-                {{/nav-link}}
-              {{/nav-item}}
-              {{#> divider divider--type="li"}}{{/divider}}
-              {{#> nav-item newcontent}}
-                {{#> nav-link nav-link--href="#"}}
-                  Instances
-                {{/nav-link}}
-              {{/nav-item}}
-              {{#> nav-item newcontent}}
-                {{#> nav-link nav-link--href="#"}}
-                  Volumes
-                {{/nav-link}}
-              {{/nav-item}}
-              {{#> nav-item newcontent}}
-                {{#> nav-link nav-link--href="#"}}
-                  Networks
-                {{/nav-link}}
-              {{/nav-item}}
-            {{/nav-list}}
+            {{#> nav-item}}
+              {{#> nav-link nav-link--href="#"}}
+                Overview
+              {{/nav-link}}
+            {{/nav-item}}
+            {{#> nav-item}}
+              {{#> nav-link nav-link--href="#" nav-link--current="true"}}
+                Resource usage
+              {{/nav-link}}
+            {{/nav-item}}
+            {{#> nav-item}}
+              {{#> nav-link nav-link--href="#"}}
+                Hypervisors
+              {{/nav-link}}
+            {{/nav-item}}
+            {{#> divider divider--type="li"}}{{/divider}}
+            {{#> nav-item}}
+              {{#> nav-link nav-link--href="#"}}
+                Instances
+              {{/nav-link}}
+            {{/nav-item}}
+            {{#> nav-item}}
+              {{#> nav-link nav-link--href="#"}}
+                Volumes
+              {{/nav-link}}
+            {{/nav-item}}
+            {{#> nav-item}}
+              {{#> nav-link nav-link--href="#"}}
+                Networks
+              {{/nav-link}}
+            {{/nav-item}}
           {{/nav-subnav}}
         {{/nav-item}}
         {{#> nav-item nav-item--expandable="true"}}
@@ -66,18 +64,16 @@
             Policy
           {{/nav-link}}
           {{#> nav-subnav nav-subnav--attribute=(concat 'aria-labelledby="' page--id '-expandable-nav-link2"')}}
-            {{#> nav-list}}
-              {{#> nav-item newcontent}}
-                {{#> nav-link nav-link--href="#"}}
-                  Subnav link 1
-                {{/nav-link}}
-              {{/nav-item}}
-              {{#> nav-item newcontent}}
-                {{#> nav-link nav-link--href="#"}}
-                  Subnav link 2
-                {{/nav-link}}
-              {{/nav-item}}
-            {{/nav-list}}
+            {{#> nav-item}}
+              {{#> nav-link nav-link--href="#"}}
+                Subnav link 1
+              {{/nav-link}}
+            {{/nav-item}}
+            {{#> nav-item}}
+              {{#> nav-link nav-link--href="#"}}
+                Subnav link 2
+              {{/nav-link}}
+            {{/nav-item}}
           {{/nav-subnav}}
         {{/nav-item}}
         {{#> nav-item nav-item--expandable="true"}}
@@ -85,18 +81,16 @@
             Authentication
           {{/nav-link}}
           {{#> nav-subnav nav-subnav--attribute=(concat 'aria-labelledby="' page--id '-expandable-nav-link3"')}}
-            {{#> nav-list}}
-              {{#> nav-item newcontent}}
-                {{#> nav-link nav-link--href="#"}}
-                  Subnav link 1
-                {{/nav-link}}
-              {{/nav-item}}
-              {{#> nav-item newcontent}}
-                {{#> nav-link nav-link--href="#"}}
-                  Subnav link 2
-                {{/nav-link}}
-              {{/nav-item}}
-            {{/nav-list}}
+            {{#> nav-item}}
+              {{#> nav-link nav-link--href="#"}}
+                Subnav link 1
+              {{/nav-link}}
+            {{/nav-item}}
+            {{#> nav-item}}
+              {{#> nav-link nav-link--href="#"}}
+                Subnav link 2
+              {{/nav-link}}
+            {{/nav-item}}
           {{/nav-subnav}}
         {{/nav-item}}
       {{/nav-list}}
