--- a/src/patternfly/components/Nav/nav.hbs
+++ b/src/patternfly/components/Nav/nav.hbs
@@ -1,9 +1,10 @@
 <nav class="{{pfv}}nav
-  {{~#if nav--IsHorizontal}} pf-m-horizontal{{/if}}
-  {{~#if nav--IsTertiary}} pf-m-tertiary{{/if}}
-  {{~#if nav--IsHorizontalSubnav}} pf-m-horizontal-subnav{{/if}}
-  {{~#if nav--IsScrollable}} pf-m-scrollable{{/if}}
-  {{~#if nav--modifier}} {{nav--modifier}}{{/if}}"
+  {{setModifiers
+      nav--IsHorizontal='pf-m-horizontal'
+      nav--IsHorizontalSubnav='pf-m-horizontal pf-m-subnav'
+      nav--IsScrollable='pf-m-scrollable'
+      nav--modifier=nav--modifier
+    }}"
   {{#if aria-label}}
     aria-label="{{aria-label}}"
   {{/if}}
