--- a/src/patternfly/demos/Page/page-template-expandable-nav.hbs
+++ b/src/patternfly/demos/Page/page-template-expandable-nav.hbs
@@ -5,39 +5,36 @@
         System panel
       {{/nav-link}}
       {{#> nav-subnav nav-subnav--attribute=(concat 'aria-labelledby="' page--id '-expandable-nav-link1"')}}
-        {{#> nav-list}}
-          {{#> nav-item newcontent}}
-            {{#> nav-link nav-link--href="#"}}
-              Overview
-            {{/nav-link}}
-          {{/nav-item}}
-          {{#> nav-item newcontent}}
-            {{#> nav-link nav-link--href="#" nav-link--current="true"}}
-              Resource usage
-            {{/nav-link}}
-          {{/nav-item}}
-          {{#> nav-item newcontent}}
-            {{#> nav-link nav-link--href="#"}}
-              Hypervisors
-            {{/nav-link}}
-          {{/nav-item}}
-          {{#> divider divider--type="li"}}{{/divider}}
-          {{#> nav-item newcontent}}
-            {{#> nav-link nav-link--href="#"}}
-              Instances
-            {{/nav-link}}
-          {{/nav-item}}
-          {{#> nav-item newcontent}}
-            {{#> nav-link nav-link--href="#"}}
-              Volumes
-            {{/nav-link}}
-          {{/nav-item}}
-          {{#> nav-item newcontent}}
-            {{#> nav-link nav-link--href="#"}}
-              Networks
-            {{/nav-link}}
-          {{/nav-item}}
-        {{/nav-list}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#"}}
+            Overview
+          {{/nav-link}}
+        {{/nav-item}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#" nav-link--current="true"}}
+            Resource usage
+          {{/nav-link}}
+        {{/nav-item}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#"}}
+            Hypervisors
+          {{/nav-link}}
+        {{/nav-item}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#"}}
+            Instances
+          {{/nav-link}}
+        {{/nav-item}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#"}}
+            Volumes
+          {{/nav-link}}
+        {{/nav-item}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#"}}
+            Networks
+          {{/nav-link}}
+        {{/nav-item}}
       {{/nav-subnav}}
     {{/nav-item}}
     {{#> nav-item nav-item--expandable="true"}}
@@ -45,18 +42,16 @@
         Policy
       {{/nav-link}}
       {{#> nav-subnav nav-subnav--attribute=(concat 'aria-labelledby="' page--id '-expandable-nav-link2"')}}
-        {{#> nav-list}}
-          {{#> nav-item newcontent}}
-            {{#> nav-link nav-link--href="#"}}
-              Subnav link 1
-            {{/nav-link}}
-          {{/nav-item}}
-          {{#> nav-item newcontent}}
-            {{#> nav-link nav-link--href="#"}}
-              Subnav link 2
-            {{/nav-link}}
-          {{/nav-item}}
-        {{/nav-list}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#"}}
+            Subnav link 1
+          {{/nav-link}}
+        {{/nav-item}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#"}}
+            Subnav link 2
+          {{/nav-link}}
+        {{/nav-item}}
       {{/nav-subnav}}
     {{/nav-item}}
     {{#> nav-item nav-item--expandable="true"}}
@@ -64,18 +59,16 @@
         Authentication
       {{/nav-link}}
       {{#> nav-subnav nav-subnav--attribute=(concat 'aria-labelledby="' page--id '-expandable-nav-link3"')}}
-        {{#> nav-list}}
-          {{#> nav-item newcontent}}
-            {{#> nav-link nav-link--href="#"}}
-              Subnav link 1
-            {{/nav-link}}
-          {{/nav-item}}
-          {{#> nav-item newcontent}}
-            {{#> nav-link nav-link--href="#"}}
-              Subnav link 2
-            {{/nav-link}}
-          {{/nav-item}}
-        {{/nav-list}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#"}}
+            Subnav link 1
+          {{/nav-link}}
+        {{/nav-item}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#"}}
+            Subnav link 2
+          {{/nav-link}}
+        {{/nav-item}}
       {{/nav-subnav}}
     {{/nav-item}}
   {{/nav-list}}
