--- a/src/patternfly/components/Divider/divider.scss
+++ b/src/patternfly/components/Divider/divider.scss
@@ -1,80 +1,98 @@
 // @debug $divider; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss
-$pf-v5-c-divider--breakpoint-map: build-breakpoint-map("sm", "md", "lg", "xl", "2xl");
+$pf-v5-c-divider--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg", "xl", "2xl");
 $pf-v5-c-divider--spacer-map: build-spacer-map("none", "xs", "sm", "md", "lg", "xl", "2xl", "3xl");
 
-// * Divider horizontal
 @mixin pf-v5-c-divider--m-horizontal {
-  flex-direction: row;
-  width: 100%;
-  height: var(--#{$divider}--Size);  // apply size to height in horizontal orientation
+  --#{$divider}--Display: var(--#{$divider}--m-horizontal--Display);
+  --#{$divider}--FlexDirection: var(--#{$divider}--m-horizontal--FlexDirection);
+  --#{$divider}--after--Width: var(--#{$divider}--m-horizontal--after--Width);
+  --#{$divider}--after--Height: var(--#{$divider}--m-horizontal--after--Height);
+
+  width: 100%; // update to var breaking change
+  height: auto; // update to var breaking change
+
+  &::after {
+    flex-basis:
+      calc(
+        var(--#{$divider}--after--FlexBasis) - calc(var(--#{$divider}--after--Inset) * 2)
+      ); // update at breaking change
+  }
 }
 
-// * Divider vertical
 @mixin pf-v5-c-divider--m-vertical {
-  flex-direction: column;
-  width: var(--#{$divider}--Size); // apply size to width in vertical orientation
-  height: 100%;
+  --#{$divider}--Display: var(--#{$divider}--m-vertical--Display);
+  --#{$divider}--FlexDirection: var(--#{$divider}--m-vertical--FlexDirection);
+  --#{$divider}--after--Width: var(--#{$divider}--m-vertical--after--Width);
+  --#{$divider}--after--Height: var(--#{$divider}--m-vertical--after--Height);
+
+  width: auto; // update to var breaking change
+  height: inherit; // update to var at breaking change
+
+  &::after {
+    flex-basis:
+      calc(
+        var(--#{$divider}--m-vertical--after--FlexBasis) - var(--#{$divider}--after--Inset)
+      ); // update at breaking change
+  }
 }
 
-:root,
-:where(.#{$divider}) {
-  // * Divider
-  --#{$divider}--Display: flex;
-  --#{$divider}--Color: var(--pf-t--global--border--color--default);
-  --#{$divider}--Size: var(--pf-t--global--border--width--divider--default);
-
-  // * Divider before
-  --#{$divider}--before--FlexBasis: 100%;
-}
-
-// - Divider
 .#{$divider} {
-  @include pf-v5-c-divider--m-horizontal; // default, set to orientation to horizontal
-  @include pf-v5-hidden-visible(var(--#{$divider}--Display));
+  // Base
+  --#{$divider}--BorderWidth--base: var(--#{$pf-global}--BorderWidth--sm);
+  --#{$divider}--BorderColor--base: var(--#{$divider}--BackgroundColor); // update at breaking change
+  --#{$divider}--Height: var(--#{$divider}--BorderWidth--base); // remove at breaking change
+  --#{$divider}--BackgroundColor: var(--#{$pf-global}--BorderColor--100); // remove at breaking change
+  --#{$divider}--after--BackgroundColor: var(--#{$divider}--BorderColor--base); // remove at breaking change
 
-  align-items: stretch;
+  // Borders
+  --#{$divider}--after--FlexBasis: 100%;
+  --#{$divider}--after--Inset: 0%;
+
+  // Vertical
+  --#{$divider}--m-vertical--after--FlexBasis: 100%; // remove at breaking change
+
+  // Horizontal mixin
+  --#{$divider}--m-horizontal--Display: flex;
+  --#{$divider}--m-horizontal--FlexDirection: row;
+  --#{$divider}--m-horizontal--after--Height: var(--#{$divider}--Height); // update at breaking change
+  --#{$divider}--m-horizontal--after--Width: auto;
+
+  // Vertical mixin
+  --#{$divider}--m-vertical--Display: inline-flex;
+  --#{$divider}--m-vertical--FlexDirection: column;
+  --#{$divider}--m-vertical--after--Height: auto;
+  --#{$divider}--m-vertical--after--Width: var(--#{$divider}--BorderWidth--base); // remove at breaking change
+
+  // Vertical
+  @include pf-v5-hidden-visible(var(--#{$divider}--Display));
+  @include pf-v5-c-divider--m-horizontal; // set to default to horizontal
+
+  flex-direction: var(--#{$divider}--FlexDirection);
+  flex-shrink: 0;
+  align-items: center;
+  align-self: stretch;
   justify-content: center;
   border: 0; // removes the default border styling on an hr
 
-  // - Divider before
-  &::before {
-    flex-basis: var(--#{$divider}--before--FlexBasis);
+  &::after {
+    align-self: stretch;
+    justify-self: center;
+    width: var(--#{$divider}--after--Width);
+    height: var(--#{$divider}--after--Height);
     content: "";
-    background-color: var(--#{$divider}--Color);
+    background-color: var(--#{$divider}--after--BackgroundColor);
   }
 
-  // - Divider horizontal
-  &.pf-m-horizontal {
-    @include pf-v5-c-divider--m-horizontal;
-  }
+  // stylelint-disable max-nesting-depth
 
-  // - Divider vertical
-  &.pf-m-vertical {
-    @include pf-v5-c-divider--m-vertical;
-  }
-
-  // - Divider spacer insets
-  @each $spacer, $spacer-value in $pf-v5-c-divider--spacer-map {
-    @if $spacer == none {
-      $spacer-value: 0%;
-    }
-
-    &.pf-m-inset-#{$spacer} {
-      --#{$divider}--before--FlexBasis: calc(100% - #{$spacer-value} * 2);
-    }
-  }
-}
-
-// TODO: move this loop to separate file for resize observer implementation
-// TODO: make responsive values opt in/out
-// stylelint-disable
-.#{$divider} {
   @each $breakpoint, $breakpoint-value in $pf-v5-c-divider--breakpoint-map {
-    $breakpoint-name: '-on-' + #{$breakpoint};
+    $breakpoint-name: if($breakpoint != "base", -on-#{$breakpoint}, "");
 
-    @include pf-v5-apply-breakpoint($breakpoint) {
-      &.pf-m-horizontal#{$breakpoint-name} {
-        @include pf-v5-c-divider--m-horizontal;
+    @if $breakpoint != "base" {
+      @include pf-v5-apply-breakpoint($breakpoint) {
+        &.pf-m-horizontal#{$breakpoint-name} {
+          @include pf-v5-c-divider--m-horizontal;
+        }
       }
     }
 
@@ -86,15 +104,16 @@ $pf-v5-c-divider--spacer-map: build-spacer-map("none", "xs", "sm", "md", "lg", "
 
     @include pf-v5-apply-breakpoint($breakpoint) {
       @each $spacer, $spacer-value in $pf-v5-c-divider--spacer-map {
+        @if $spacer == none {
+          $spacer-value: 0%;
+        }
+
         &.pf-m-inset-#{$spacer}#{$breakpoint-name} {
-          @if $spacer == none {
-            --#{$divider}--before--FlexBasis: 100%;
-          } @else {
-            --#{$divider}--before--FlexBasis: calc(100% - #{$spacer-value} * 2);
-          }
+          --#{$divider}--after--Inset: #{$spacer-value};
         }
       }
     }
   }
+
+  // stylelint-enable
 }
-// stylelint-enable
